--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,20 @@
 <h1>Update Pet</h1>
 
-
+<form method="post" action="/pets/<%= @pet.id %>">
+  <label>Name:</label>
+  <br></br>
+  <input type="text" name="pet[name]" id="pet_name" value="<%= @pet.name %>">
+  <br></br>
+  <label>Choose an existing owner:</label>
+  <br></br>
+  <%Owner.all.each do |owner|%>
+    <input type="radio" name="pet[owner_id]" id="<%=owner.id%>" value="<%= owner.id %>" <%='checked' if @pet.owner.eql?( owner)%>><%=owner.name%></input>
+  <%end%>
+  <br></br>
+  <label>and/or, create a new owner:</label>
+  <br></br>
+  <label>Name:</label>
+  <input type="text" name="owner[name]" id="owner_name"></input>
+  <br></br>
+  <input type="submit" value="Update Pet">
+</form>
