--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -17,7 +17,7 @@
 
   <br></br>
 
-  <label>and/or, create a new owner:</label>
+  <label>and/or create a new owner:</label>
   <br></br>
   <label>name:</label>
   <input type="text" name="owner_name"></input>
